--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
-    <title>Jawad Ghouri</title>
+    <title>Web App Development</title>
 </head>
 <body>
     <div class="container">
         <div class="content">
             <h1>CSCS 342: Web App Development</h1>
             <p>Welcome to our Website.</p>
-            <h3>Contact me!</h3>
+            <h3>Contact us!</h3>
+            <ul>
+                <li>Instructor: Akheem Yousaf</li>
+                <li>Lab Instructor: Jawad Ghouri</li>
+                <li>Teaching Assistant: Talha Irshad</li>
+            </ul>
             <div class="social">
                 <ul>
                     <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
@@ -23,7 +28,7 @@
                     <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
                 </ul>
             </div>
-            <p>You can read my <a href="https://www.blogspot.com/">blogs</a> too.</p>
+            <p>You can see our <a href="https://www.blogspot.com/">projects</a> too.</p>
         </div>
     </div>
 </body>
