--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Welcome to our Website.</p>
             <h3>Contact us!</h3>
             <ul>
-                <li>Instructor: Akheem Yousaf</li>
+                <li>Course Instructor: Akheem Yousaf</li>
                 <li>Lab Instructor: Jawad Ghouri</li>
                 <li>Teaching Assistant: Talha Irshad</li>
             </ul>
