--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <div class="content">
+            <div>Hello World
             <h1>CSCS 342: Web App Development</h1>
             <p>Welcome to our Website.</p>
             <h3>Contact us!</h3>
